--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/jdmiragliotta/mongoDbApp/issues"
   },
-  "homepage": "https://github.com/jdmiragliotta/mongoDbApp#readme"
+  "homepage": "https://github.com/jdmiragliotta/mongoDbApp#readme",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "mongojs": "^2.3.0",
+    "morgan": "^1.7.0"
+  }
 }
